<resources>
    <string name="app_name">RMA_Project_demo_v2</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="login_button">Login</string>
    <string name="welcome_to_app">Welcome</string>
    <string name="app_name_display">NurdorApp 0.1</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_new_account">Create new account</string>
    <string name="name_sign_in">Name</string>
    <string name="surname_sign_in">Surname</string>
    <string name="address_format">[St] [num], [zip] [city]</string>
    <string name="phone_sign_in">Phone</string>
    <string name="email_sign_in">Email</string>
    <string name="username_sign_in">Username</string>
    <string name="password_sign_in">Password</string>
    <string name="repeat_password_sign_in">Repeat password</string>
    <string name="sign_in">Sign In</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Log out</string>
    <string name="app_name_heading">Nurdor</string>
    <string name="admin_window">Admin window</string>
    <string name="qr_code">QR Code</string>
    <string name="event_archive">Event archive</string>
    <string name="create_event">Create event</string>
    <string name="nurdor_volunteer">NURDOR volunteer</string>
    <string name="donations_qr">Donations QR</string>
    <string name="present_volunteers">Present volunteers</string>
    <string name="profile_image_picker">Choose</string>
    <string name="choose_profile_picture">Choose profile picture</string>
    <string name="nearest_city">Nearest city</string>
    <string name="volunteer_role">Volunteer role</string>
    <string name="add_to_your_events">Add to your events</string>
    <string name="events_near_you">Events near you</string>
    <string name="other_events">Other events</string>
    <string name="filter_results">Filtered results</string>
    <string name="done">Done</string>
    <string name="date_with_colon">Date:</string>
    <string name="time_with_colon">Time:</string>
    <string name="select_event">Select event</string>
    <string name="deselect_event">Deselect event</string>
    <string name="volunteer_menu">Volunteer menu</string>
    <string name="event_image">Event image</string>
    <string name="event_menu">Event menu</string>
    <string name="volunteer_image">Volunteer image</string>
    <string name="location_with_colon">Location:</string>
    <string name="description_with_colon">Description:</string>
    <string name="location">Location</string>
    <string name="download_pdf">PDF</string>
    <string name="join">Join</string>
    <string name="duration_with_colon">Duration:</string>
    <string name="volunteers">Volunteers</string>
    <string name="close">Close</string>
    <string name="event_name_with_colon">Event name:</string>
    <string name="enter_event_name">Enter event name</string>
    <string name="event_description_with_colon">Event description:</string>
    <string name="enter_description">Enter description</string>
    <string name="start_date_with_colon">Start date:</string>
    <string name="pick">Pick</string>
    <string name="start_time_w_colon">Start time:</string>
    <string name="end_date_w_colon">End date:</string>
    <string name="end_time_w_colon">End time:</string>
    <string name="pick_image_w_colon">Image:</string>
    <string name="city_w_colon">City:</string>
    <string name="profile_picture">Profile picture</string>
    <string name="role_w_colon">Role:</string>
    <string name="email_w_colon">Email:</string>
    <string name="role">Role</string>
    <string name="email">Email</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="write_a_note">Write a note</string>
    <string name="send">Send</string>
    <string name="leave_event">Leave event</string>
    <string name="filter_archive">Filter archive</string>
    <string name="expand_filters">Expand filters</string>
    <string name="collapse_filters">Collapse filters</string>
    <string name="name">Name</string>
    <string name="sort_by">Sort</string>
    <string name="date">Date</string>
    <string name="city">City</string>
    <string name="apply_filters">Apply filters</string>
    <string name="reset_filters">Reset filters</string>
    <string name="filter_events">Filter events</string>
    <string name="pick_start_date">Pick start date</string>
    <string name="pick_start_time">Pick start time</string>
    <string name="pick_location">Pick location</string>
    <string name="profile_details">Profile details</string>
    <string name="event_details">Event details</string>
    <string name="channel_name">nurdor_app_channel</string>
    <string name="channel_description">Notification channel for NURDOR volunteer app.</string>
    <string name="unknown">Unknown</string>
    <string name="check_your_internet_connection">Check your internet connection</string>
    <string name="refresh">Refresh</string>
    <string name="about_nurdor">About NURDOR</string>
    <string name="about_text">s</string>
    <string name="send_email">Send email</string>
    <string name="view_profile">View profile</string>
    <string name="remove_from_event">Remove from event</string>
    <string name="enrolled_volunteers">Enrolled volunteers</string>
    <string name="phone_number">Phone number</string>
    <string name="address">Address</string>
    <string name="set_up_event">Set up event</string>
    <string name="number_of_stands">Number of stands</string>
    <string name="start">Start</string>
    <string name="cancel">Cancel</string>
    <string name="running_events">Running events</string>
    <string name="finish">Finish</string>
    <string name="end_this_event">End this event</string>
    <string name="statistics">Statistics</string>
    <string name="stands">Stands</string>
    <string name="total_donations">Total donations</string>
    <string name="search_button">Search button</string>
    <string name="search">Search</string>
    <string name="by_name">By name</string>
    <string name="by_surname">By surname</string>
    <string name="by_phone_number">By phone number</string>
    <string name="by_username">By username</string>
    <string name="str_default">Default</string>
    <string name="current_donations">Current donations:</string>
    <string name="add_donation">Add donation</string>
    <string name="amount">Amount</string>
    <string name="add_amount">Add amount</string>
    <string name="leave">Leave</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="hh_mm">hh:mm</string>
    <string name="picked_image_png">event.png</string>
    <string name="by_event_name">By event name</string>
    <string name="by_city">By city</string>
    <string name="starts_at_with_colon">Starts at:</string>
    <string-array name="sort_add_events_types">
        <item></item>
        <item>Name</item>
        <item>City (zip code)</item>
        <item>Date</item>
    </string-array>
    <string-array name="months">
        <item></item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
</resources>